--- a/clubs.html
+++ b/clubs.html
@@ -9,6 +9,10 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="stylesheet" href="css/styles.css">
 	 <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
+	 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	 <link rel="manifest" href="images/site.webmanifest">
 </head>
 <body>
 
@@ -37,8 +41,10 @@
             <main>
 
               <div id="sports">
-                <h1>Sports Clubs</h1>
-                <img src="images/basketball.jpg" alt="Basketball team practice" class="round">
+								    <figure class="frame">
+										<img src="images/basketball.jpg" alt="Basketball team practice" class="round">
+										<figcaption class="pic-text">Sports Clubs</figcaption>
+									 </figure>
                 <p>We offer various sports year-round with updated facilities.</p>
                 <ul class="tablet-desktop">
                       <li>Baseball</li>
@@ -51,9 +57,10 @@
               </div>
 
               <div id="academic">
-
-                    <h1>Academic Clubs</h1>
+								    <figure class="frame">
                     <img src="images/scienceclub.jpg" alt="Students working in science lab" class="round">
+										<figcaption class="pic-text">Academic Clubs</figcaption>
+									  </figure>
                     <p>We have many choices available to those who want to train their brain.</p>
                     <ul class="tablet-desktop">
                           <li>Computer Society</li>
@@ -65,9 +72,10 @@
               </div>
 
               <div id="cultural">
-
-                    <h1>Cultural Clubs</h1>
+										<figure class="frame">
                     <img src="images/culturalclub.jpeg" alt="Student high-fiving teacher" class="round">
+										<figcaption class="pic-text">Cultural Clubs</figcaption>
+										</figure>
                     <p>We offer opportunities to those seeking to broaden their cultural horizon.</p>
                     <ul class="tablet-desktop">
                           <li>French Club</li>
