--- a/programs.html
+++ b/programs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Students: Stephen Davis and Lanee Matthews
      File Name: programs.html
-     Date: October 16, 2022 -->
+     Date: October 27, 2022 -->
 <html lang="en">
 <head>
 	 <title>State College: Programs</title>
@@ -9,6 +9,10 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="stylesheet" href="css/styles.css">
 	 <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
+	 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	 <link rel="manifest" href="images/site.webmanifest">
 </head>
 <body>
 
@@ -31,12 +35,62 @@
             </nav>
 
             <!-- Use the main area to add the main content of the webpage -->
-            <main>
+						<main class="grid">
 
-              <div>
-              </div>
+													<article>
+														<h3>Technology</h3>
+														<p>The cutting edge and in-demand industry</p>
+															<ul>
+																<li>Computer Science</li>
+																<li>Cyber Security</li>
+																<li>Network Administration</li>
+																<li>Software Engineering</li>
+																<li>Web Development</li>
+															</ul>
+													</article>
 
-            </main>
+													<article>
+														<h3>Science</h3>
+														<p>Study how the world around you works</p>
+															<ul>
+																<li>Physics</li>
+																<li>Chemistry</li>
+																<li>Biology</li>
+																<li>Astronomy</li>
+																<li>Geology</li>
+															</ul>
+														</article>
+
+														<article>
+															<h3>Business</h3>
+															<p>Learn how to be a leader in the business world</p>
+																<ul>
+																	<li>Business Administration</li>
+																	<li>Accounting</li>
+																	<li>Marketing</li>
+																	<li>Human Resource Management</li>
+																</ul>
+																</article>
+
+															<article>
+																	<h3>Healthcare</h3>
+																	<p>Help others stay healthy and enjoy life longer</p>
+																		<ul>
+																			<li>Pre-Med</li>
+																			<li>Nursing</li>
+																			<li>Dental Hygiene</li>
+																			<li>Occupational Therapy</li>
+																			<li>Radiology</li>
+																		</ul>
+															</article>
+
+																<aside class="tablet-desktop grid-item4">
+																	<p>Whatever your interest, State College may have a program for you.</p>
+																	<p>All programs teach modern terminology and technology for today's ever changing world</p>
+																	<p>Did you know a college degree has never been more important?</p>
+																</aside>
+
+						  					</main>
 
             <!-- Use the footer area to add webpage foot content -->
             <footer>
