--- a/template.html
+++ b/template.html
@@ -9,6 +9,10 @@
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="stylesheet" href="css/styles.css">
 	 <link href="https://fonts.googleapis.com/css2?family=Francois+One&family=Roboto+Slab&display=swap" rel="stylesheet">
+	 <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+	 <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+	 <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+	 <link rel="manifest" href="images/site.webmanifest">
 </head>
 <body>
 
